# tower-builder-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
assets/: icons.ai
src/: constants.rs  main.rs  utils.rs
src/game/: game.rs  mod.rs  slice.rs
src/game/input/: key_down_handlers.rs  mod.rs  update.rs
src/game/lifecycle/: mod.rs  prerender.rs  render.rs  update.rs
src/game/lifecycle/render/: ground.rs  mod.rs  rooms.rs  sky.rs  text.rs  tools.rs  ui.rs
src/game/lifecycle/run_event_handlers/: mod.rs  timers.rs  ui.rs
src/game/lifecycle/update/: input.rs  interactivity.rs  mod.rs  timers.rs  ui.rs
src/game/slices/: mod.rs
src/game/slices/input/: key_down_handlers.rs  mod.rs  mutations.rs  slice.rs  update.rs
src/game/slices/timers/: events.rs  mod.rs  slice.rs  timer.rs  timer_listener.rs  update.rs
src/game/slices/tools/: mod.rs  slice.rs  (+1 more)
src/game/timers/: mod.rs  slice.rs  timer.rs  timer_listener.rs  types.rs  update.rs
src/game/tools/: mod.rs  slice.rs  update.rs
src/game/ui/: events.rs  mod.rs  update.rs
src/game/world/: mod.rs  slice.rs
src/map/: coordinates.rs  coordinates_box.rs  mod.rs
src/measurements/: axis.rs  coordinates.rs  rect.rs
src/tower/: mod.rs  tower.rs
src/tower/occupants/: types.rs
src/tower/rooms/: mod.rs  room.rs
src/tower/route_finding/: mod.rs
src/types/: mod.rs  prev_and_current.rs
src/types/map/: coordinates_box.rs
src/types/measurements/: dimensions.rs  mod.rs  point.rs  rect.rs
src/types/tree/: mod.rs  tests.rs  tree.rs  tree_node.rs  tree_node_input.rs
test_saves/: test.tdt
(+168 files in other folders)
